fix: improve layout on very small screens, avoid horizontal scrolling

--- a/src/routes/styles.scss
+++ b/src/routes/styles.scss
@@ -156,9 +156,8 @@ body.show-paragraphs {
 	}
 }
 
-@media (max-width: 450px) {
+@media (max-width: 28rem) {
 	// avoid vertical scrolling due to very long words
-
 	h1,
 	h2,
 	h3,
